--- a/sass/component/_style.scss
+++ b/sass/component/_style.scss
@@ -154,6 +154,7 @@ html {
       .custom-control-label {
         font-family: $font;
         font-weight: 300;
+        cursor: pointer;
         &::before {
           border: 1px solid rgba($color_3, 0.5);
         }
@@ -177,19 +178,30 @@ html {
     }
   }
 }
-.submitBtn {
-  position: relative;
-  left: 50%;
-  transform: translateX(-50%);
+.submitBtn,
+.resetBtn {
   padding: 10px 30px;
   font-family: $font;
   border-radius: 25px;
+  font-weight: 300;
+  margin: 0 10px;
+}
+.resetBtn {
+  &:hover {
+    background-color: $color_1 !important;
+    border-color: $color_1 !important;
+    box-shadow: 0 0 0 0.2rem $color_4 !important;
+  }
+  &:focus {
+    outline: none;
+    box-shadow: none !important;
+  }
+}
+.submitBtn {
   background-color: $color_1;
   border-color: $color_1;
   margin: 30px 0;
-  &:hover,
-  &:active,
-  &:focus {
+  &:hover {
     background-color: $color_5 !important;
     border-color: $color_5 !important;
     box-shadow: 0 0 0 0.2rem $color_4 !important;
@@ -219,40 +231,10 @@ footer {
 .pie {
   width: $pieWidth;
   height: $pieWidth;
-  border-radius: 50%;
-  background: $color_Round;
-  background-image: linear-gradient(to right, transparent 50%, $color_Round2 0);
-  overflow: hidden;
   position: relative;
-  margin: 20px auto;
+  margin: 10px auto;
+  z-index: 0;
 
-  &::before {
-    content: "";
-    display: block;
-    margin-left: 50%;
-    height: 100%;
-    border-radius: 0 100% 100% 0 / 50%;
-    background-color: inherit;
-    transform-origin: left;
-    // animation: spin 3s linear infinite, bg 6s step-end infinite;
-  }
-  &#js-Neuroticism::before {
-    background-color: inherit;
-    transform: rotate(90deg);
-  }
-  &#js-Emotional::before {
-    background-color: inherit;
-    transform: rotate(180deg);
-  }
-  &#js-Negative::before {
-    background-color: $color_Round2;
-    transform: rotate(90deg);
-  }
-
-  &#js-Indifferent::before {
-    background-color: $color_Round2;
-    transform: rotate(180deg);
-  }
   &__num,
   &__numInfo {
     position: absolute;
@@ -276,7 +258,10 @@ footer {
     }
   }
 }
-
+.chartStyle {
+  width: 100%;
+  height: 500px;
+}
 @keyframes spin {
   to {
     transform: rotate(0.5turn);
