--- a/sass/component/_style.scss
+++ b/sass/component/_style.scss
@@ -198,8 +198,8 @@ html {
   }
 }
 .submitBtn {
-  background-color: $color_1;
-  border-color: $color_1;
+  background-color: $color_3;
+  border-color: $color_3;
   margin: 30px 0;
   &:hover {
     background-color: $color_5 !important;
@@ -270,5 +270,60 @@ footer {
 @keyframes bg {
   50% {
     background: #655;
+  }
+}
+
+.styleChart {
+  width: 60%;
+  height: 100%;
+  margin: 15px auto;
+}
+
+#background {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  left: 0%;
+  top: 0%;
+  background-color: rgba(0, 0, 0, 0.98);
+  z-index: 9999;
+}
+.lds-facebook {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  //background-color: #655;
+  display: inline-block;
+  transform: translate(44%, 45%);
+}
+.lds-facebook div {
+  display: inline-block;
+  position: absolute;
+  left: 8px;
+  width: 16px;
+  background: #fff;
+  animation: lds-facebook 1.2s cubic-bezier(0, 0.5, 0.5, 1) infinite;
+}
+.lds-facebook div:nth-child(1) {
+  left: 8px;
+  animation-delay: -0.24s;
+}
+.lds-facebook div:nth-child(2) {
+  left: 32px;
+  animation-delay: -0.12s;
+}
+.lds-facebook div:nth-child(3) {
+  left: 56px;
+  animation-delay: 0;
+}
+@keyframes lds-facebook {
+  0% {
+    top: 8px;
+    height: 64px;
+  }
+  50%,
+  100% {
+    top: 24px;
+    height: 32px;
   }
 }
